CHANGES.txt - 09/17/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- "make install" no longer overwrites an existing PAM
	  configuration file (STR #1064)
	- The scheduler now closes all files on startup when run
	  in daemon mode (STR #1009)
	- Added a new RGBW colorspace to the CUPS raster format
	  (STR #1071)
	- The pdftops filter now sets the page size based on the
	  media box when not scaling the output (STR #912)
	- The pdftops filter now supports masked images (STR
	  #281)
	- The pdftops filter produced large output when rendering
	  PDF files containing lot of repeated images (STR #327)
	- The pdftops filter now minimizes print processing of
	  PDF files when using the page-ranges option (STR #273)
	- Updated pdftops filter to Xpdf 3.01.
	- Added new cupsBackchannelRead() and
	  cupsBackchannelWrite() functions, as well as
	  backchannel support to the parallel, serial, socket,
	  and USB backends (STR #1252)
	- The parallel and USB backends now treat a "no space
	  available" error as an out-of-paper condition (STR
	  #1225)
	- The "lpc" command now supports the "status all" command
	  (STR #1004)
	- ippReadIO() did not read collections properly (STR
	  #1249)
	- The "make test" script now creates the test files in
	  "/tmp/cups-$USER" instead of "/tmp/$USER" (STR #981)
	- All backends now abort on error when printing a job to
	  a class - this allows the next printer in the class to
	  print the job (STR #1084)
	- The scheduler now verifies that a printer supports
	  Letter or A4 media sizes before setting them as the
	  initial default (STR #1250)
	- The cupstestppd program now flags bad Resolution
	  options (STR #1269)
	- The USB backend now retries printing when the printer
	  is disconnected or turned off (STR #1267)
	- Added new httpGetHostname() function to CUPS API, and
	  use it instead of gethostname() so that the web
	  interface will work correctly on systems whose hostname
	  is not the FQDN (STR #1266)